ajustes split, apresentação